--- a/index.html
+++ b/index.html
@@ -34,7 +34,21 @@
             </div>
         </section>
         <section id="detalhes">
-
+            <article id="video">
+                <h2><i class="fa-solid fa-handshake"></i>Deixe-me apresentar</h2>
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/VdWfSfWA_BQ?si=HR9UWum9pvmAIV65" title="YouTube video player" framebrder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </article> <!-- Fim article-->
+            <article id="skills">
+                <h2><i class="fa-solid fa-brain"></i>Minhas skills</h2>
+            </article> <!-- Fim article-->
+            <article id="formacao">
+                <h2><i class="fa-solid fa-graduation-cap"></i>Formação</h2>
+            </article> <!-- Fim article-->
+            <article id="projetos">
+                <h2><i class="fa-solid fa-diagram-project"></i>Projetos</h2>
+            </article> <!-- Fim article-->
         </section>
     </main>
     <footer>
