--- a/index.html
+++ b/index.html
@@ -40,15 +40,88 @@
                     <iframe src="https://www.youtube.com/embed/VdWfSfWA_BQ?si=HR9UWum9pvmAIV65" title="YouTube video player" framebrder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </article> <!-- Fim article-->
+
             <article id="skills">
                 <h2><i class="fa-solid fa-brain"></i>Minhas skills</h2>
+
+                <div id="skill-container">
+
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome"><i class="fa-solid fa-code"></i>
+                                HTML5
+                            </span>
+                            <span class="porcent">
+                                90%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 90%;">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome"><i class="fa-solid fa-code"></i>
+                                CSS3
+                            </span>
+                            <span class="porcent">
+                                90%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 90%;">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome"><i class="fa-solid fa-code"></i>
+                                CSS3
+                            </span>
+                            <span class="porcent">
+                                90%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 90%;">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome"><i class="fa-solid fa-person-rays"></i>
+                                Comunicação
+                            </span>
+                            <span class="porcent">
+                                75%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 75%;">
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
             </article> <!-- Fim article-->
+
             <article id="formacao">
                 <h2><i class="fa-solid fa-graduation-cap"></i>Formação</h2>
             </article> <!-- Fim article-->
+
             <article id="projetos">
                 <h2><i class="fa-solid fa-diagram-project"></i>Projetos</h2>
             </article> <!-- Fim article-->
+
         </section>
     </main>
     <footer>
