--- a/index.html
+++ b/index.html
@@ -116,6 +116,26 @@
 
             <article id="formacao">
                 <h2><i class="fa-solid fa-graduation-cap"></i>Formação</h2>
+
+                <div id="formacao-container">
+                    <div class="curso">
+                        <p class="periodo">1995 - 2002</p>
+                        <h3 class="instituicao">Univates</h3>
+                        <p class="titulacao">Administração de Empresas - Bacharelado</p>
+                    </div>
+                    <div class="curso">
+                        <p class="periodo">2015 - 2016</p>
+                        <h3 class="instituicao">La Salle</h3>
+                        <p class="titulacao">Gestão Financeira - MBA</p>
+                    </div>
+                    <div class="curso">
+                        <p class="periodo">2022 - 2024</p>
+                        <h3 class="instituicao">Univates</h3>
+                        <p class="titulacao">Análise e Desenvolvimento de Sistemas - Bacharelado</p>
+                    </div>
+                </div>
+
+
             </article> <!-- Fim article-->
 
             <article id="projetos">
