--- a/index.html
+++ b/index.html
@@ -140,12 +140,55 @@
 
             <article id="projetos">
                 <h2><i class="fa-solid fa-diagram-project"></i>Projetos</h2>
+
+                <div id="projeto-container">
+                    <div class="projeto"> <!-- Projeto 01 -->
+                        <img src="imagens/projeto-01-videos.jpg" alt="Projeto 1" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2022</p>
+                            <h3 class="titulo">Projeto de Vídeos</h3>
+                            <p>Projeto construído para treinar a inserção de vídeos em nosso site.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptates rerum necessitatibus ex maiores vel id molestias eligendi debitis? Incidunt, architecto? Aliquid laboriosam exercitationem quasi autem. Ipsam, hic laudantium. Velit?</p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto"> <!-- Projeto 02 -->
+                        <img src="imagens/projeto-02-cordel.jpg" alt="Projeto 2" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2023</p>
+                            <h3 class="titulo">Projeto Cordel</h3>
+                            <p>Projeto construído para treinar efeito paralax em imagens.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptates rerum necessitatibus ex maiores vel id molestias eligendi debitis? Incidunt, architecto? Aliquid laboriosam exercitationem quasi autem. Ipsam, hic laudantium. Velit?</p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto"> <!-- Projeto 03 -->
+                        <img src="imagens/projeto-03-android.jpg" alt="Projeto 3" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2023</p>
+                            <h3 class="titulo">Projeto Android</h3>
+                            <p>Projeto construído para treinar conteúdos e imagens dinâmicas.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptates rerum necessitatibus ex maiores vel id molestias eligendi debitis? Incidunt, architecto? Aliquid laboriosam exercitationem quasi autem. Ipsam, hic laudantium. Velit?</p>
+                            </details>
+                        </div>
+                    </div>
+
+
+                </div>
             </article> <!-- Fim article-->
 
         </section>
     </main>
     <footer>
-
+        Portfólio desenvolvido por <a href="https://www.cursoemvideo.com/" target="_blank" rel="nofollow">Curso em Vídeo</a> em 2025
     </footer>
 
     <script src="scripts/script.js"></script>
